k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ticket-system
  namespace: ticket-system
  labels:
    app: ticket-system
spec:
  type: ClusterIP
  selector:
    app: ticket-system
  ports:
    - name: http
      port: 80
      targetPort: http
    - name: management
      port: 8081
      targetPort: management
